# cs-tui

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/cs-api/: Cargo.toml
crates/cs-api/src/: auth.rs  bookmarks.rs  client.rs  cmail.rs  endpoint.rs  entries.rs  envelope.rs  error.rs  follows.rs  guilds.rs  lib.rs  notes.rs  notifications.rs  profile_patch.rs  rate_limit.rs  replies.rs  settings.rs  tokens.rs  topics.rs  types.rs  users.rs  watch.rs
crates/cs-api/src/rtdb/: client.rs  jwt.rs  mod.rs
crates/cs-tui/: Cargo.toml
crates/cs-tui/src/: config.rs  main.rs  prefs.rs  session.rs
crates/cs-tui/src/ui/: app.rs  audio.rs  bookmarks.rs  cmail.rs  compose.rs  edit_profile.rs  editor.rs  feed.rs  guild_detail.rs  guilds.rs  help.rs  hyperlink.rs  images.rs  input.rs  journal.rs  list.rs  list_nav.rs  login.rs  markdown.rs  menu.rs  mod.rs  nav.rs  notifications.rs  open.rs  player.rs  post_detail.rs  profile.rs  settings_screen.rs  shuffle.rs  text.rs  theme.rs  toast.rs  topic_feed.rs  topics.rs
docs/: api-v0.3.7.md  api-v0.4.md  api-v0.5.0.md
