[package]
name = "cs-tui"
description = "Terminal client for cyberspace.online"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cs-tui"
path = "src/main.rs"

[dependencies]
cs-api = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
ratatui-image = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
pulldown-cmark = { workspace = true }
time = { workspace = true }
